# cloud-op

./: Cargo.toml  Dockerfile  README.md  cloud-op.yaml
.github/workflows/: build-docker-images.yml  rust-check.yml
node_scripts/: add.sh  cloud-op  demo  env.sh  update_yamls.py
node_scripts/yamls/: backup_pvc.yaml
node_scripts/yamls/backup/: backup_job.yaml  update_backup_yamls.py
node_scripts/yamls/recover/: node_pvc.yaml  recover_job.yaml  update_recover_yamls.py
src/: backup.rs  config.rs  consensus.rs  crypto.rs  main.rs  recover.rs  storage.rs  util.rs
src/backup/: mod.rs  state.rs  state_backup.rs
src/crypto/: eth.rs  sm.rs
src/export/: mod.rs
src/recover/: chain.rs  cloud_storage.rs  common_storage.rs  executor.rs  utxo.rs
src/rollback/: cloud_rollback.rs  executor_rollback.rs  mod.rs  rocksdb_rollback.rs  storage_rollback.rs
