[package]
name = "cloud-op"
version = "0.3.0"
authors = ["Yieazy <yuitta@163.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
prost = "0.12"
hex = "0.4"
cita-database = "0.5"
cita-vm = "0.3"
cita-types = "0.1"
cita_trie = "4.0"
rlp = "0.5"
fs_extra = "1.2"
async-recursion = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"

# storage
storage_opendal = { git = "https://github.com/cita-cloud/storage_opendal", package = "storage", branch = "v6.7.2" }
storage_rocksdb = { git = "https://github.com/cita-cloud/storage_rocksdb", package = "storage", branch = "v6.6.2-updated-rocksdb" }
# executor
executor_evm = { git = "https://github.com/cita-cloud/executor_evm", package = "executor", branch = "v6.7.2" }

cita_cloud_proto = "=6.7.2"

[lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
unused_crate_dependencies = "warn"
