[package]
name = "cloud-op"
version = "0.3.1"
authors = ["Yieazy <yuitta@163.com>"]
license = "Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
prost = "0.13"
hex = "0.4"
fs_extra = "1.3"
async-recursion = "1.1"
tokio = { version = "1.41", features = ["full"] }
toml = "0.8"

# keep same with executor_evm
cita-database = "0.5"
cita-vm = "0.4"
cita-types = "0.1"
cita_trie = "4.1"
rlp = "0.5"

# storage
storage_opendal = { git = "https://github.com/cita-cloud/storage_opendal", package = "storage" }
storage_rocksdb = { git = "https://github.com/cita-cloud/storage_rocksdb", package = "storage", branch = "v6.6.2-updated-rocksdb" }
# executor
executor_evm = { git = "https://github.com/cita-cloud/executor_evm", package = "executor" }

cita_cloud_proto = { git = "https://github.com/cita-cloud/cloud-common-rs" }

[lints.rust]
unsafe_code = "forbid"
missing_copy_implementations = "warn"
unused_crate_dependencies = "warn"
